# build123d

./: .gitignore  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  build123d_common.py  build1d.py  build1d_super.py  build1d_super_test.py  build1d_test.py  build3d.py  build_line.py  build_line_test.py  build_part.py  build_part_test.py  build_sketch.py  build_sketch_test.py  canadian_flag.py  cq3.py  din_rail.py  mypy.ini  partcad.yaml  pyproject.toml  requirements.txt  rtree.py  setup.cfg
.github/: FUNDING.yml
.github/actions/setup/: action.yml
.github/actions/setup-macos-arm64/: action.yml
.github/workflows/: black.yml  coverage.yml  lint.yml  mypy.yml  publish.yml  test.yml
docs/: M6-1x12-countersunk-screw.step  advanced.rst  advantages.rst  algebra_definition.rst  algebra_performance.rst  api_reference.rst  assemblies.rst  build_generic.rst  build_line.rst  build_part.rst  build_sketch.rst  builder_api_reference.rst  builders.rst  buildline_examples.py  center.py  center.rst  cheat_sheet.rst  conf.py  custom.rst  debugging_logging.rst  direct_api_reference.rst  environment.yaml  examples_1.rst  external.rst  general_examples.py  general_examples_algebra.py  import_export.rst  index.rst  installation.rst  introduction.rst  introductory_examples.rst  introductory_examples_algebra.rst  joints.rst  key_concepts.rst  key_concepts_algebra.rst  line_types.py  location_arithmetic.rst  objects.rst  objects_1d.py  objects_2d.py  (+20 more)
docs/_static/: heart_token.glb  tea_cup.glb
docs/_templates/: layout.html
docs/assets/: ttt-23-t-24-curved_support.py
docs/assets/examples/: create_rst.py  create_thumbnail_images.py  examples.yaml
docs/assets/ttt/: ttt-23-02-02-sm_hanger.py  ttt-23-t-24-curved_support.py  ttt-24-SPO-06-Buffer_Stand.py  ttt-ppp0101.py  ttt-ppp0102.py  ttt-ppp0103.py  ttt-ppp0104.py  ttt-ppp0105.py  ttt-ppp0106.py  ttt-ppp0107.py  ttt-ppp0108.py  ttt-ppp0109.py  ttt-ppp0110.py
examples/: abstract_operations.py  algebra.py  algpart.py  algsketch.py  benchy.py  benchy_v2024.py  boxes_on_faces.py  boxes_on_faces_algebra.py  build123d_customizable_logo.py  build123d_customizable_logo_algebra.py  build123d_logo.py  build123d_logo_algebra.py  canadian_flag.py  canadian_flag_algebra.py  circuit_board.py  circuit_board_algebra.py  clock.py  clock_algebra.py  custom_sketch_objects.py  custom_sketch_objects_algebra.py  din_rail.py  din_rail_algebra.py  dual_color_3mf.py  extrude.py  extrude_algebra.py  handle.py  handle_algebra.py  heat_exchanger.py  heat_exchanger_algebra.py  hinge_joint.py  holes.py  holes_algebra.py  intersecting_chamfers.py  intersecting_chamfers_algebra.py  intersecting_pipes.py  intersecting_pipes_algebra.py  joints.py  joints_algebra.py  key_cap.py  key_cap_algebra.py  (+31 more)
examples/assembly/: RC_Buggy_2_front_suspension.txt  assembly.py  hexapod_animated.py  hexapod_parts.py  hexapod_static.py  mg92b.py  stepreader.py
src/build123d/: __init__.py  abstract_operations.py  alg_compat.py  algebra.py  build123d_common.py  build_common.py  build_enums.py  build_generic.py  build_generic_operations.py  build_line.py  build_part.py  build_sketch.py  build_sketch_test.py  common.py  direct_api.py  drafting.py  exporters.py  exporters3d.py  generic.py  geometry.py  hull.py  importers.py  joints.py  jupyter_tools.py  line.py  mesh_tools.py  mesher.py  objects_curve.py  objects_part.py  objects_sketch.py  operations_generic.py  operations_part.py  operations_sketch.py  pack.py  part.py  part_operations.py  persistence.py  sketch.py  topology.py  utils.py  (+1 more)
src/build123d.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/build123d/_dev/: scm_version.py
src/build123d/occ_impl/: geom.py  shapes.py
tests/: build_common_tests.py  build_generic_tests.py  build_line_tests.py  build_part_test.py  build_part_tests.py  build_sketch_tests.py  cyl_w_rect_hole.stl  direct_api_tests.py  test_algebra.py  test_build_common.py  test_build_enums.py  test_build_generic.py  test_build_line.py  test_build_part.py  test_build_sketch.py  test_direct_api.py  test_drafting.py  test_exporters.py  test_exporters3d.py  test_importers.py  test_joints.py  test_mesher.py  test_pack.py  test_persistence.py  test_topo_explore.py
