[build-system]

requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]

build-backend = "setuptools.build_meta"

[project]
name = "build123d"
dynamic = ["version"]
authors = [
    {name = "Roger Maitland", email = "gumyr9@gmail.com"},
]
description = "A python CAD programming library"
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "3d models",
    "3d printing",
    "3d",
    "brep",
    "cad",
    "cadquery",
    "opencscade",
    "python",
]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "cadquery-ocp >= 7.7.0",
    "typing_extensions >= 4.6.0, <5",
    "numpy >= 1.24.1, <2",
    "svgpathtools >= 1.5.1, <2",
    "anytree >= 2.8.0, <3",
    "ezdxf >= 1.0.0, < 2",
    "numpy-stl >= 3.0.0, <4",
    "ipython >= 8.0.0, <9",
    "py-lib3mf",
    "ocpsvg",
    "trianglesolver"
]

[project.urls]
"Homepage" = "https://github.com/gumyr/build123d"
"Documentation" = "https://build123d.readthedocs.io/en/latest/index.html"
"Bug Tracker" = "https://github.com/gumyr/build123d/issues"

[tool.setuptools.packages.find]
where = ["src"]
# exclude build123d._dev from wheels
exclude = ["build123d._dev"]

[tool.setuptools_scm]
write_to = "src/build123d/_version.py"

[tool.black]
target-version = ["py39", "py310", "py311", "py312"]
line-length = 88

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Keep single-line signatures when body is an Ellipsis
preview = true
