[metadata]
name = build123d
version = 0.1.0
author = Gumyr
author_email = gumyr9@gmail.com
description = An alternative cadquery programming library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gumyr/Build123D
project_urls =
    Bug Tracker = https://github.com/gumyr/Build123D/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9
install_requires =
include_package_data = True
[options.packages.find]
where = .

[options.package_data]
