[metadata]
name = build123d
version = 0.1.0
author = Gumyr
author_email = gumyr9@gmail.com
description = An cadquery prototype programming library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gumyr/build123d
project_urls =
    Bug Tracker = https://github.com/gumyr/build123d/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
include_package_data = True
[options.packages.find]
where = src
[options.package_data]
