[metadata]
name = build123d
version = 0.1.0
author = Gumyr
author_email = gumyr9@gmail.com
description = A CAD programming library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gumyr/build123d
project_urls =
    Bug Tracker = https://github.com/gumyr/build123d/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    cadquery-ocp==7.6.3a0
    OCP-stubs @ git+https://github.com/CadQuery/OCP-stubs@7.6.3
    typing_extensions
    numpy
    svgpathtools
		anytree

include_package_data = True
[options.packages.find]
where = src
[options.package_data]
